[tool.poetry]
name = "ik-examples"
version = "0.1.0"
description = ""
authors = ["sho okumoto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sympy = "^1.12"
numpy = "^1.26.4"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
